--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://hgomez.github.com
-title: My Octopress Blog
+title: Rico's Blog
 subtitle: A blogging framework for hackers.
-author: Your Name
+author: Henri Gomez
 simple_search: http://google.com/search
 description:
 
