yet another update

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://hgomez.github.com
 title: Rico's Blog
-subtitle: A blogging framework for hackers.
+subtitle: Continuous Integration, Delivery, OSX, OpenJDK, Tomcat and much more.
 author: Henri Gomez
 simple_search: http://google.com/search
 description:
