--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,9 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # post_asides:
 # page_asides:
 
+blog_index_asides:  [custom/asides/about.html, asides/recent_posts.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
+post_asides:        [custom/asides/about.html, asides/recent_posts.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html]
+
 # ----------------------- #
 #   3rd Party Settings    #
 # ----------------------- #
